# AegisOS

./: .gitignore  Makefile  README.md  docker-compose.yml  implementation_plan.md  pyproject.toml  task.md
.github/workflows/: ci.yml
apps/api/: dependencies.py  main.py  middleware.py
apps/dashboard/: .env.local.example  Dockerfile  next.config.mjs  package.json  tailwind.config.ts
core/: __init__.py  exceptions.py
core/config/: __init__.py  settings.py
core/database/: __init__.py  adapters.py  models.py  session.py
core/events/: __init__.py  bus.py  memory_bus.py  redis_bus.py
core/schemas/: __init__.py  base.py  entity.py  events.py  investigation.py  risk.py  transaction.py
core/security/: __init__.py  audit.py  auth.py  encryption.py  rbac.py
core/utils/: __init__.py  helpers.py  logging.py
datasets/: generator.py
datasets/scenarios/: __init__.py  account_takeover.py  card_fraud.py  money_mule.py  synthetic_identity.py
infrastructure/docker/: Dockerfile.api  Dockerfile.worker
models/: base.py
models/ensemble/: autoencoder.py  catboost_model.py  isolation_forest.py  lightgbm_model.py  xgboost_model.py
models/graph_models/: __init__.py  gat.py  graphsage.py  tgn.py
models/temporal/: __init__.py  sequence_encoder.py  temporal_transformer.py
services/agents/: __init__.py  base.py  orchestrator.py
services/behavioral_ai/: __init__.py  anomaly.py  engine.py  profiles.py
services/compliance/: __init__.py  engine.py
services/explainability/: __init__.py  counterfactual.py  engine.py  narrator.py  shap_explainer.py  similar_cases.py
(+118 files in other folders)
